<package>
    <name>roborts_sim</name>
    <version>1.0.0</version>
    <description>
        The simulation package for RoboRTS project.
    </description>
    <author>Xin Zhang</author>
    <maintainer email="xinz11@student.unimelb.edu.au">Xin Zhang</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/XinZhangk</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roborts_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roborts_common</build_depend>
    <build_depend>roborts_costmap</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roborts_msgs</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roborts_common</run_depend>
    <run_depend>roborts_costmap</run_depend>

    <export>
    </export>

</package>